[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seith"
version = "0.1.0"
description = "Seith CLI tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"docker",
	"argcomplete"
]
authors = [
    {name = "h07low"}
]

[project.scripts]
seith = "seith:main"
seith_exec = "seith_exec:main"
#sed -i '1a # PYTHON_ARGCOMPLETE_OK' /home/sigpwn/.local/bin/seith_exec
